src-gen/de/kit/kastel/travart/kconfig/parser/LKCParser.java
// $ANTLR 3.5.3 de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g 2024-11-28 11:34:25

package de.kit.kastel.travart.kconfig.parser;
import java.io.IOException;
// Required for parsing of source statements

import org.antlr.runtime.ANTLRFileStream;
import org.antlr.runtime.BitSet;
import org.antlr.runtime.CharStream;
import org.antlr.runtime.CommonTokenStream;
import org.antlr.runtime.EarlyExitException;
import org.antlr.runtime.MismatchedSetException;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.ParserRuleReturnScope;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;
import org.antlr.runtime.tree.CommonTree;
import org.antlr.runtime.tree.CommonTreeAdaptor;
import org.antlr.runtime.tree.RewriteEarlyExitException;
import org.antlr.runtime.tree.RewriteRuleSubtreeStream;
import org.antlr.runtime.tree.RewriteRuleTokenStream;
import org.antlr.runtime.tree.TreeAdaptor;


@SuppressWarnings("all")
public class LKCParser extends Parser {
	public static final String[] tokenNames = new String[] {
			"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BLOCK", "CHOICE", "COMMENT",
			"CONFIG", "CONTINUE", "DASH", "DASHES", "DEFAULT", "DEFCONFIG_LIST", "DEPENDS",
			"ENDCHOICE", "ENDIF", "ENDMENU", "ENV", "ESC", "FALSE", "HELP", "HELP_TEXT",
			"HELP_WS", "HEX", "HEX_OR_HELP", "IF", "INDENT", "LEADING_WS", "MAINMENU",
			"MENU", "MENUCONFIG", "NEWLINE", "ON", "OPTION", "OPTIONAL", "PROMPT",
			"RANGE", "SELECT", "SL_COMMENT", "SOURCE", "TRUE", "WORD", "WORD_QUOTE",
			"WS", "'!='", "'&'", "'('", "')'", "';'", "'='", "'bool'", "'boolean'",
			"'int'", "'string'", "'tristate'", "'|'", "'~'"
	};
	public static final int EOF=-1;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int BLOCK=4;
	public static final int CHOICE=5;
	public static final int COMMENT=6;
	public static final int CONFIG=7;
	public static final int CONTINUE=8;
	public static final int DASH=9;
	public static final int DASHES=10;
	public static final int DEFAULT=11;
	public static final int DEFCONFIG_LIST=12;
	public static final int DEPENDS=13;
	public static final int ENDCHOICE=14;
	public static final int ENDIF=15;
	public static final int ENDMENU=16;
	public static final int ENV=17;
	public static final int ESC=18;
	public static final int FALSE=19;
	public static final int HELP=20;
	public static final int HELP_TEXT=21;
	public static final int HELP_WS=22;
	public static final int HEX=23;
	public static final int HEX_OR_HELP=24;
	public static final int IF=25;
	public static final int INDENT=26;
	public static final int LEADING_WS=27;
	public static final int MAINMENU=28;
	public static final int MENU=29;
	public static final int MENUCONFIG=30;
	public static final int NEWLINE=31;
	public static final int ON=32;
	public static final int OPTION=33;
	public static final int OPTIONAL=34;
	public static final int PROMPT=35;
	public static final int RANGE=36;
	public static final int SELECT=37;
	public static final int SL_COMMENT=38;
	public static final int SOURCE=39;
	public static final int TRUE=40;
	public static final int WORD=41;
	public static final int WORD_QUOTE=42;
	public static final int WS=43;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public LKCParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public LKCParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return LKCParser.tokenNames; }
	@Override public String getGrammarFileName() { return "de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g"; }


	public String baseDir;

	@Override
	public String getErrorHeader(RecognitionException e) {
		String msg = super.getErrorHeader(e);
		msg = getSourceName() + ": " + msg;
		return msg;
	}


	public static class input_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "input"
	// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:94:1: input : ( stmts )+ ;
	public final LKCParser.input_return input() throws RecognitionException {
		LKCParser.input_return retval = new LKCParser.input_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope stmts1 =null;


		try {
			// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:94:6: ( ( stmts )+ )
			// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:94:8: ( stmts )+
			{
				root_0 = (CommonTree)adaptor.nil();


				// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:94:8: ( stmts )+
				int cnt1=0;
				loop1:
					while (true) {
						int alt1=2;
						int LA1_0 = input.LA(1);
						if ( LA1_0 >= CHOICE && LA1_0 <= CONFIG||LA1_0 >= IF && LA1_0 <= INDENT||LA1_0 >= MAINMENU && LA1_0 <= NEWLINE||LA1_0==SOURCE ) {
							alt1=1;
						}

						switch (alt1) {
						case 1 :
							// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:94:8: stmts
						{
							pushFollow(FOLLOW_stmts_in_input103);
							stmts1=stmts();
							state._fsp--;

							adaptor.addChild(root_0, stmts1.getTree());

						}
						break;

						default :
							if ( cnt1 >= 1 ) {
								break loop1;
							}
							EarlyExitException eee = new EarlyExitException(1, input);
							throw eee;
						}
						cnt1++;
					}

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "input"


	public static class stmts_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "stmts"
	// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:96:1: stmts : ( common_stmt | menu_stmt | choice_stmt | mainmenu_stmt );
	public final LKCParser.stmts_return stmts() throws RecognitionException {
		LKCParser.stmts_return retval = new LKCParser.stmts_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope common_stmt2 =null;
		ParserRuleReturnScope menu_stmt3 =null;
		ParserRuleReturnScope choice_stmt4 =null;
		ParserRuleReturnScope mainmenu_stmt5 =null;


		try {
			// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:96:6: ( common_stmt | menu_stmt | choice_stmt | mainmenu_stmt )
			int alt2=4;
			switch ( input.LA(1) ) {
			case COMMENT:
			case CONFIG:
			case IF:
			case INDENT:
			case MENUCONFIG:
			case NEWLINE:
			case SOURCE:
			{
				alt2=1;
			}
			break;
			case MENU:
			{
				alt2=2;
			}
			break;
			case CHOICE:
			{
				alt2=3;
			}
			break;
			case MAINMENU:
			{
				alt2=4;
			}
			break;
			default:
				NoViableAltException nvae =
				new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
			case 1 :
				// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:97:6: common_stmt
			{
				root_0 = (CommonTree)adaptor.nil();


				pushFollow(FOLLOW_common_stmt_in_stmts116);
				common_stmt2=common_stmt();
				state._fsp--;

				adaptor.addChild(root_0, common_stmt2.getTree());

			}
			break;
			case 2 :
				// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:98:8: menu_stmt
			{
				root_0 = (CommonTree)adaptor.nil();


				pushFollow(FOLLOW_menu_stmt_in_stmts125);
				menu_stmt3=menu_stmt();
				state._fsp--;

				adaptor.addChild(root_0, menu_stmt3.getTree());

			}
			break;
			case 3 :
				// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:99:8: choice_stmt
			{
				root_0 = (CommonTree)adaptor.nil();


				pushFollow(FOLLOW_choice_stmt_in_stmts134);
				choice_stmt4=choice_stmt();
				state._fsp--;

				adaptor.addChild(root_0, choice_stmt4.getTree());

			}
			break;
			case 4 :
				// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:100:8: mainmenu_stmt
			{
				root_0 = (CommonTree)adaptor.nil();


				pushFollow(FOLLOW_mainmenu_stmt_in_stmts143);
				mainmenu_stmt5=mainmenu_stmt();
				state._fsp--;

				adaptor.addChild(root_0, mainmenu_stmt5.getTree());

			}
			break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "stmts"


	public static class block_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "block"
	// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:103:1: block : ( block_stmts )* -> ^( BLOCK ( block_stmts )* ) ;
	public final LKCParser.block_return block() throws RecognitionException {
		LKCParser.block_return retval = new LKCParser.block_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope block_stmts6 =null;

		RewriteRuleSubtreeStream stream_block_stmts=new RewriteRuleSubtreeStream(adaptor,"rule block_stmts");

		try {
			// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:104:5: ( ( block_stmts )* -> ^( BLOCK ( block_stmts )* ) )
			// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:104:7: ( block_stmts )*
			{
				// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:104:7: ( block_stmts )*
				loop3:
					while (true) {
						int alt3=2;
						int LA3_0 = input.LA(1);
						if ( LA3_0 >= CHOICE && LA3_0 <= CONFIG||LA3_0 >= IF && LA3_0 <= INDENT||LA3_0 >= MENU && LA3_0 <= NEWLINE||LA3_0==SOURCE ) {
							alt3=1;
						}

						switch (alt3) {
						case 1 :
							// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:104:7: block_stmts
						{
							pushFollow(FOLLOW_block_stmts_in_block161);
							block_stmts6=block_stmts();
							state._fsp--;

							stream_block_stmts.add(block_stmts6.getTree());
						}
						break;

						default :
							break loop3;
						}
					}


				// AST REWRITE
				// elements: block_stmts
				// token labels:
				// rule labels: retval
				// token list labels:
				// rule list labels:
				// wildcard labels:
				retval.tree = root_0;
				RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

				root_0 = (CommonTree)adaptor.nil();
				// 104:20: -> ^( BLOCK ( block_stmts )* )
				{
					// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:104:23: ^( BLOCK ( block_stmts )* )
					{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot(adaptor.create(BLOCK, "BLOCK"), root_1);
						// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:104:31: ( block_stmts )*
						while ( stream_block_stmts.hasNext() ) {
							adaptor.addChild(root_1, stream_block_stmts.nextTree());
						}
						stream_block_stmts.reset();

						adaptor.addChild(root_0, root_1);
					}

				}


				retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "block"


	public static class block_stmts_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "block_stmts"
	// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:107:1: block_stmts : ( common_stmt | menu_stmt | choice_stmt );
	public final LKCParser.block_stmts_return block_stmts() throws RecognitionException {
		LKCParser.block_stmts_return retval = new LKCParser.block_stmts_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope common_stmt7 =null;
		ParserRuleReturnScope menu_stmt8 =null;
		ParserRuleReturnScope choice_stmt9 =null;


		try {
			// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:108:5: ( common_stmt | menu_stmt | choice_stmt )
			int alt4=3;
			switch ( input.LA(1) ) {
			case COMMENT:
			case CONFIG:
			case IF:
			case INDENT:
			case MENUCONFIG:
			case NEWLINE:
			case SOURCE:
			{
				alt4=1;
			}
			break;
			case MENU:
			{
				alt4=2;
			}
			break;
			case CHOICE:
			{
				alt4=3;
			}
			break;
			default:
				NoViableAltException nvae =
				new NoViableAltException("", 4, 0, input);
				throw nvae;
			}
			switch (alt4) {
			case 1 :
				// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:108:7: common_stmt
			{
				root_0 = (CommonTree)adaptor.nil();


				pushFollow(FOLLOW_common_stmt_in_block_stmts188);
				common_stmt7=common_stmt();
				state._fsp--;

				adaptor.addChild(root_0, common_stmt7.getTree());

			}
			break;
			case 2 :
				// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:109:7: menu_stmt
			{
				root_0 = (CommonTree)adaptor.nil();


				pushFollow(FOLLOW_menu_stmt_in_block_stmts196);
				menu_stmt8=menu_stmt();
				state._fsp--;

				adaptor.addChild(root_0, menu_stmt8.getTree());

			}
			break;
			case 3 :
				// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:110:7: choice_stmt
			{
				root_0 = (CommonTree)adaptor.nil();


				pushFollow(FOLLOW_choice_stmt_in_block_stmts204);
				choice_stmt9=choice_stmt();
				state._fsp--;

				adaptor.addChild(root_0, choice_stmt9.getTree());

			}
			break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "block_stmts"


	public static class common_stmt_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "common_stmt"
	// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:113:1: common_stmt : ( config_stmt | source_stmt | comment_stmt | if_stmt | NEWLINE !);
	public final LKCParser.common_stmt_return common_stmt() throws RecognitionException {
		LKCParser.common_stmt_return retval = new LKCParser.common_stmt_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token NEWLINE14=null;
		ParserRuleReturnScope config_stmt10 =null;
		ParserRuleReturnScope source_stmt11 =null;
		ParserRuleReturnScope comment_stmt12 =null;
		ParserRuleReturnScope if_stmt13 =null;

		CommonTree NEWLINE14_tree=null;

		try {
			// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:114:5: ( config_stmt | source_stmt | comment_stmt | if_stmt | NEWLINE !)
			int alt5=5;
			switch ( input.LA(1) ) {
			case INDENT:
			{
				int LA5_1 = input.LA(2);
				if ( LA5_1==CONFIG||LA5_1==MENUCONFIG ) {
					alt5=1;
				}
				else if ( LA5_1==SOURCE ) {
					alt5=2;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
								new NoViableAltException("", 5, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}
			break;
			case CONFIG:
			case MENUCONFIG:
			{
				alt5=1;
			}
			break;
			case SOURCE:
			{
				alt5=2;
			}
			break;
			case COMMENT:
			{
				alt5=3;
			}
			break;
			case IF:
			{
				alt5=4;
			}
			break;
			case NEWLINE:
			{
				alt5=5;
			}
			break;
			default:
				NoViableAltException nvae =
				new NoViableAltException("", 5, 0, input);
				throw nvae;
			}
			switch (alt5) {
			case 1 :
				// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:114:7: config_stmt
			{
				root_0 = (CommonTree)adaptor.nil();


				pushFollow(FOLLOW_config_stmt_in_common_stmt221);
				config_stmt10=config_stmt();
				state._fsp--;

				adaptor.addChild(root_0, config_stmt10.getTree());

			}
			break;
			case 2 :
				// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:115:7: source_stmt
			{
				root_0 = (CommonTree)adaptor.nil();


				pushFollow(FOLLOW_source_stmt_in_common_stmt229);
				source_stmt11=source_stmt();
				state._fsp--;

				adaptor.addChild(root_0, source_stmt11.getTree());

			}
			break;
			case 3 :
				// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:116:7: comment_stmt
			{
				root_0 = (CommonTree)adaptor.nil();


				pushFollow(FOLLOW_comment_stmt_in_common_stmt237);
				comment_stmt12=comment_stmt();
				state._fsp--;

				adaptor.addChild(root_0, comment_stmt12.getTree());

			}
			break;
			case 4 :
				// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:117:7: if_stmt
			{
				root_0 = (CommonTree)adaptor.nil();


				pushFollow(FOLLOW_if_stmt_in_common_stmt245);
				if_stmt13=if_stmt();
				state._fsp--;

				adaptor.addChild(root_0, if_stmt13.getTree());

			}
			break;
			case 5 :
				// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:118:7: NEWLINE !
			{
				root_0 = (CommonTree)adaptor.nil();


				NEWLINE14=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_common_stmt253);
			}
			break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "common_stmt"


	public static class mainmenu_stmt_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "mainmenu_stmt"
	// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:122:1: mainmenu_stmt : MAINMENU ^ prompt NEWLINE !;
	public final LKCParser.mainmenu_stmt_return mainmenu_stmt() throws RecognitionException {
		LKCParser.mainmenu_stmt_return retval = new LKCParser.mainmenu_stmt_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token MAINMENU15=null;
		Token NEWLINE17=null;
		ParserRuleReturnScope prompt16 =null;

		CommonTree MAINMENU15_tree=null;
		CommonTree NEWLINE17_tree=null;

		try {
			// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:123:5: ( MAINMENU ^ prompt NEWLINE !)
			// de\\kit\\kastel\\travart\\kconfig\\parser\\LKC.g:123:7: MAINMENU ^ prompt NEWLINE !
			{
				root_0 = (CommonTree)adaptor.nil();


				MAINMENU15=(Token)match(input,MAINMENU,FOLLOW_MAINMENU_in_mainmenu_stmt272);
				MAINMENU15_tree = (CommonTree)adaptor.create(MAINMENU15);
				root_0 = (CommonTree)adaptor.becomeRoot(MAINMENU15_tree, root_0);

				pushFollow(FOLLOW_prompt_in_mainmenu_stmt275);
				prompt16=prompt();
				state._fsp--;

				adaptor.addChild(root_0, prompt16.getTree());

				NEWLINE17=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_mainmenu_stmt277);
			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "mainmenu_stmt"


	public static class menu_stmt_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};

